<?xml version="1.0"?>
<package>
  <name>vrep_ros_robotis_plugin</name>
  <version>0.0.0</version>
  <description>The vrep_ros_robotis_plugin package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>BSD</license>

  <author email="sch@robotis.com">sch</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
